--- a/Q1.html
+++ b/Q1.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Question 1</title>
-        <meta charset="UTF-8">
-        <script src="Q1.js" defer></script>
-    </head>
-    <body>
-        <h1>Question 1</h1>
-    </body>
+<html>
+<head>
+  <title>Dice Roll</title>
+  <link rel="stylesheet" as="style" href="Q1.css">
+  <script src="Q1.js" defer></script>
+</head>
+<body>
+  <h1>Dice Roll</h1>
+  <p id="dice-roll"></p>
+</body>
 </html>
