--- a/Q1.html
+++ b/Q1.html
@@ -7,6 +7,16 @@
 </head>
 <body>
   <h1>Dice Roll</h1>
-  <p id="dice-roll"></p>
+  <script>
+    document.write("<pre>");
+    document.write("ooooooooooo\n");  
+    document.write("o         o\n");  
+    document.write("o  #   #  o\n");  
+    document.write("o    #    o\n");  
+    document.write("o  #   #  o\n");  
+    document.write("o         o\n");  
+    document.write("ooooooooooo\n");  
+    document.write("</pre>");
+  </script>
 </body>
 </html>
