--- a/Q2.html
+++ b/Q2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Question 1</title>
+        <title>Question 2</title>
         <meta charset="UTF-8">
         <script src="Q2.js" defer></script>
     </head>
@@ -9,9 +9,9 @@
         <h1>Question 2</h1>
         <hr>
         <form>
-            <input id="num1" type="number" name="value">
+            <input id="num1" type="number">
             <br>
-            <input id="num2" type="number" name="value">
+            <input id="num2" type="number">
             <br>
             <button type="button" onclick="addition()">Submit</button>
         </form>
