--- a/Q1.html
+++ b/Q1.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dice Roll</title>
-  <link rel="stylesheet" as="style" href="Q1.css">
+  <title>Q1</title>
   <script src="Q1.js" defer></script>
 </head>
 <body>
