--- a/Q2.html
+++ b/Q2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Question 2</title>
+        <title>Q2</title>
         <meta charset="UTF-8">
         <script src="Q2.js" defer></script>
     </head>
