--- a/Q4.html
+++ b/Q4.html
@@ -7,5 +7,12 @@
   </head>
   <body>
     <h1>Question 4</h1>
+    <form>
+        <p>Enter amount to numbers to be averaged</p>
+        <input id="total_nums" type="number" min="0">
+        <button type="button" onclick="numFunctions()" >Submit</button>
+    </form>
+    <p id="sum"></p>
+    <p id="mean"></p>
   </body>
 </html>
