--- a/Q6.html
+++ b/Q6.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1>Q6</h1>
+    <hr>
+    <button type="button" onclick="RandomWord()">Generate</button>
+    <br><br>
+    <div id="output"></div>
+    <hr>
   </body>
 </html>
